packages/verta-protocol/fixtures/token/jws/invalid/AU-TOKEN-WRONGISS-004.jwt
eyJ0eXAiOiJKV1QiLCJhbGciOiJFZERTQSIsImtpZCI6ImZpeHR1cmUtdG9rZW4ta2V5LTEifQ.eyJpc3MiOiJvdGhlci1icmlkZ2UuZXhhbXBsZSIsImF1ZCI6InZlcnRhLWdhdGV3YXkiLCJzdWIiOiJhY2N0LTEiLCJqdGkiOiJucy0xNzc1MDAyMjAwMDAwMDAwMDAwIiwiaWF0IjoxNzc1MDAyMjAwLCJuYmYiOjE3NzUwMDIyMDAsImV4cCI6MTc3NTAwMjUwMCwiZGV2aWNlX2lkIjoiZGV2aWNlLTEiLCJtYW5pZmVzdF9pZCI6Im1hbi0yMDI2LTA0LTAxLTAwMSIsInBvbGljeV9lcG9jaCI6NywiY29yZV92ZXJzaW9ucyI6WzFdLCJjYXJyaWVyX3Byb2ZpbGVzIjpbImNhcnJpZXItcHJpbWFyeSJdLCJjYXBhYmlsaXRpZXMiOlsxLDJdLCJzZXNzaW9uX21vZGVzIjpbInRjcCJdLCJyZWdpb25fc2NvcGUiOiJldS1jZW50cmFsIiwidG9rZW5fbWF4X3JlbGF5X3N0cmVhbXMiOjgsInRva2VuX21heF91ZHBfZmxvd3MiOjQsInRva2VuX21heF91ZHBfcGF5bG9hZCI6MTIwMH0.dR3jHS9GSZ2kxFqaTmzLRm9pcVf5kQyBuzlbAw_ikghnlH9ZhYVxr_gaSmPv-RNTIJ3S1gkWIKJ63dvgZfjeAQ